--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,10 @@
 }
 
 .image-style {
-  height: 155px;
-  margin-left: 2%;
-  margin-top: 4%;
-  width: 10%;
+  margin-left: 1%;
+  margin-top: 1%;
+  width: 30%;
+  height: 30%;
 }
 
 .heading{
@@ -17,7 +17,7 @@
 }
 
 .salmon{
-  background-image: url("https://cdn.hipwallpaper.com/i/75/6/1NStk9.jpg");
+  background-image: url("/images/dev logo.jpg");
   min-height: 100vh;
   background-size: cover;
   margin-bottom: auto;
@@ -34,10 +34,10 @@
 
   
   .image-style{
-    height: 80px;
+    height: 100px;
     margin-top: 4%;
     margin-left: 1%;
-    width: 250px;
+    width: 200px;
   }
   
   
